objects/tspa__HistoryTechSeeConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Having all the configurations for Visual Remote Assistant - Visual History Configuration</description>
    <fields>
        <fullName>tspa__Data_Type__c</fullName>
        <label>Data Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Desktop_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desktop Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Dutch_Value__c</fullName>
        <label>Dutch Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__FaceMeet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FaceMeet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Field_Api_Name__c</fullName>
        <label>Field Api Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__French_Value__c</fullName>
        <label>French Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__German_Value__c</fullName>
        <label>German Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Greek_Value__c</fullName>
        <label>Greek Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Hebrew_Value__c</fullName>
        <label>Hebrew Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Hungarian_Value__c</fullName>
        <label>Hungarian Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Italian_Value__c</fullName>
        <label>Italian Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Japanese_Value__c</fullName>
        <label>Japanese Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Korean_Value__c</fullName>
        <label>Korean Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Label__c</fullName>
        <label>Label</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Mirroring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mirroring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Polish_Value__c</fullName>
        <label>Polish Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Portuguese_Value__c</fullName>
        <label>Portuguese Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Russian_Value__c</fullName>
        <label>Russian Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Session_with_Observer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Session with Observer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Slovak_Value__c</fullName>
        <label>Slovak Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Sort_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__Spanish_Value__c</fullName>
        <label>Spanish Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Swedish__c</fullName>
        <label>Swedish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Thai_Value__c</fullName>
        <label>Thai Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Turkish_Value__c</fullName>
        <label>Turkish Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Value__c</fullName>
        <label>English Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Video_And_Audio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Video And Audio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Video_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Video Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Video_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Video Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Visual_Journey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visual Journey</label>
        <type>Checkbox</type>
    </fields>
    <label>Visual Remote Assistant - Visual History</label>
    <listViews>
        <fullName>tspa__History_View</fullName>
        <columns>NAME</columns>
        <columns>tspa__Value__c</columns>
        <columns>tspa__Data_Type__c</columns>
        <columns>tspa__Description__c</columns>
        <columns>tspa__Label__c</columns>
        <columns>tspa__Sort_Order__c</columns>
        <columns>tspa__Field_Api_Name__c</columns>
        <columns>tspa__FaceMeet__c</columns>
        <columns>tspa__Video_Session__c</columns>
        <filterScope>Everything</filterScope>
        <label>History View</label>
    </listViews>
</CustomObject>